# wasm-test

./: .gitignore  Cargo.toml  TODO.md  bench.sh  results.txt
other/: loop.c  loop.ts  loop.txt  loop_loop.c  loop_loop.ts  loop_loop.wasm.ts
src/: main.rs
wasm/: loop_loop.wasm  loop_loop.wat
