[package]
name = "wasmer-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.1.0"
wasmer-engine-universal = "2.1.0"

wasmer-compiler-singlepass = "2.1.0"
wasmer-compiler-cranelift = "2.1.0"
wasmer-compiler-llvm = "2.1.0"

[profile.dev]
opt-level = 3
